# runway-outcomes-lab

./: .gitignore  README.md  USER_MANUAL.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/etl/: load_thelook_csvs.py
backend/app/ml/: model.py
backend/app/routers/: analytics.py  ml.py
data/raw/: .gitkeep
docs/images/: README.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/simulator/: page.tsx
frontend/components/: AgeDistributionChart.tsx  MetricCard.tsx  ReturnsByCategoryChart.tsx  RevenueByDepartmentChart.tsx  RevenueOverTimeChart.tsx  RiskResultCard.tsx  TopBrandsChart.tsx
scripts/: create_db.sql  create_db_simple.sql  download_dataset.py  quick_setup.sh  setup_db.sh  setup_local.sh  setup_postgres.sh  take_screenshots.sh  test_db_connection.py
warehouse/: dbt_project.yml
warehouse/models/: schema.yml  sources.yml
warehouse/models/core/: dim_customer.sql  dim_product.sql  fct_order_items.sql
warehouse/models/staging/: stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_users.sql
